--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "bootstrap": "^5.2.0",
+    "classnames": "^2.3.1",
     "next": "12.2.2",
     "react": "18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "shortid": "^2.2.16"
