--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "react-bootstrap": "^2.5.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "react-modal": "^3.15.1",
+    "react-toastify": "^9.0.8",
     "shortid": "^2.2.16"
   },
   "devDependencies": {
     "@types/node": "18.0.4",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "@types/react-modal": "^3.13.1",
     "@types/shortid": "^0.0.29",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.2",
