--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-icons": "^4.4.0",
     "react-modal": "^3.15.1",
     "react-toastify": "^9.0.8",
-    "shortid": "^2.2.16"
+    "shortid": "^2.2.16",
+    "swiper": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "18.0.4",
