--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-modal-image": "^2.5.0",
     "react-toastify": "^9.0.8",
     "shortid": "^2.2.16",
+    "styled-components": "^5.3.5",
     "swiper": "^8.3.2"
   },
   "devDependencies": {
@@ -28,8 +29,13 @@
     "@types/react-dom": "18.0.6",
     "@types/react-modal": "^3.13.1",
     "@types/shortid": "^0.0.29",
+    "@types/styled-components": "^5.1.26",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.2",
+    "prisma": "^4.2.1",
     "typescript": "4.7.4"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
