--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "bootstrap": "^5.2.0",
     "classnames": "^2.3.1",
+    "disable-scroll": "^0.6.0",
+    "framer-motion": "^7.3.2",
     "next": "12.2.2",
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
