--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdx-js/loader": "^2.1.5",
+    "@mdx-js/react": "^2.1.5",
+    "@next/mdx": "^13.0.3",
     "bootstrap": "^5.2.0",
     "classnames": "^2.3.1",
     "disable-scroll": "^0.6.0",
     "framer-motion": "^7.3.2",
-    "next": "12.2.2",
-    "react": "18.2.0",
-    "react-bootstrap": "^2.5.0",
-    "react-dom": "18.2.0",
+    "next": "^13.0.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-modal": "^3.15.1",
     "react-modal-image": "^2.5.0",
@@ -26,15 +28,19 @@
     "swiper": "^8.3.2"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.8",
     "@types/node": "18.0.4",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
     "@types/react-modal": "^3.13.1",
     "@types/shortid": "^0.0.29",
     "@types/styled-components": "^5.1.26",
+    "autoprefixer": "^10.4.13",
     "eslint": "8.19.0",
-    "eslint-config-next": "12.2.2",
-    "prisma": "^4.2.1",
+    "eslint-config-next": "^13.0.3",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4",
     "typescript": "4.7.4"
   },
   "resolutions": {
