--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "disable-scroll": "^0.6.0",
     "framer-motion": "^7.3.2",
     "next": "^13.0.3",
+    "nextjs-progressbar": "^0.0.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
